# NMT

./: .gitignore  Dockerfile  README.md  commands.py  pyproject.toml
config/: ml.yaml
mlops/: infer.py  train.py
mlops/constants/: __init__.py
mlops/models/: loading.py  transformer.py
mlops/preprocess/: __init__.py
mlops/utils/: __init__.py
